Revision history for WWW::Mechanize

NEXT
========================================
[INTERNALS


1.22        Fri Mar  2 00:05:57 CST 2007
========================================
[INTERNALS]
Added new tests.

Added Perl::Critic changes and a perlcriticrc file.


1.21_04     Sat Oct  7 21:35:42 CDT 2006
========================================
[FIXES]
*   $mech->content( type => 'text' ) was not freeing memory.  Thanks to
    Cat Okita for finding it.

[INTERNALS]
*   Made the order of parms to $mech->content() not relevant.


1.21_03     Sat Oct  7 01:21:46 CDT 2006
========================================
[THINGS THAT MAY BREAK YOUR CODE]
*   The methods $mech->form() and $mech->follow() have been removed.
    They've been deprecated since 1.10, which was released in Feb 2005.

[ENHANCEMENTS]
*   I'm trying to nail down what seems to be a memory leak on long-running
    Mech programs.  I'm stringifying URI::URL objects wherever I can.

[INTERNALS]
*   No longer uses UNIVERSAL.


1.21_02     Wed Oct  4 13:14:30 CDT 2006
========================================
[ENHANCEMENTS THAT MAY BREAK YOUR CODE]

*   The $mech->stack_depth() setting had no way to say "don't cache any
    pages at all".  How silly!

    Now, if you set $mech->stack_depth(0), no history of pages will be kept.
    In the past, it would mean "Keep all pages."  This means that if you want
    to set it to keep all pages, set it to some ridiculously large number.

[DOCUMENTATION]
*   The docs previously refered to Compress::Gzip instead of Compress::Zlib.


1.21_01 Mon Sep 18 17:18:43 CDT 2006
========================================
[ENHANCEMENTS]
*   If Compress::Zlib is installed, gzipped content is now
    accepted and transparently decoded. No additional syntax needed!
    This should save time and bandwidth in a number of cases.
    (Mark Stosberg)

*   Added a put() method.  It also calls a subfunction called
    _SUPER_put that will be removed once LWP::UserAgent supports put().


