@@ -50,7 +50,7 @@ SERVERLOOP: {
         %cat = map { $_ => 1 } (defined $q->param('cat') ? $q->param('cat') : qw( cat_foo cat_bar ));
         my @categories = map { $cat{$_} ? "checked" : "" } qw( cat_foo cat_bar cat_baz );
         $res = HTTP::Response->new(200, "OK", undef, sprintf($body,$location,$session,$query,@categories));
-        $res->content_type('text/html');
+        $res->content_type('text/html; charset=utf8');
         debug "Request " . ($r->uri->path || "/");
         if ( $location eq '/quit_server') {
           debug "Quitting";
