@@ -1,0 +1,14 @@
+<!DOCTYPE html 
+     PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
+
+<title>Query Builder</title>
+</head>
+  <body id="comp-Search-Build">
+<form method="post" action="Build.html" name="BuildQuery">
+<input name="ValueOf&#39;CF.{т}&#39;" size="20" />
+</form>
+  </body>
+</html>
