@@ -2,7 +2,9 @@ Revision history for WWW::Mechanize
 
 NEXT
 ========================================
-[INTERNALS
+[FIXES]
+
+*   RT #26593: Improved handling of charsets.  Thanks Kevin Falcone.
 
 
 1.22        Fri Mar  2 00:05:57 CST 2007
